compiler/testData/diagnostics/tests/varargs/varargIterator.kt
package test

class CompositeIterator<T>(vararg iterators: java.util.<!PLATFORM_CLASS_MAPPED_TO_KOTLIN!>Iterator<!><T>){
    val iteratorsIter = iterators.iterator()
}
